small findbugs commit